# relay-xdp

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.test.yml
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  deploy.yml  rust.yml  security-audit.yml
ansible/: .gitignore  README.md  ansible.cfg
ansible/group_vars/: all.yml  production.yml  staging.yml  vault_production.yml  vault_staging.yml
ansible/inventory/: production.yml  staging.yml
ansible/playbooks/: module-only.yml  relay-only.yml  rollback.yml  site.yml
ansible/playbooks/group_vars/: all.yml
ansible/playbooks/group_vars/production/: vault.yml
ansible/playbooks/group_vars/staging/: vault.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/kernel-module/handlers/: main.yml
ansible/roles/kernel-module/tasks/: main.yml
ansible/roles/redis/handlers/: main.yml
ansible/roles/redis/tasks/: main.yml
ansible/roles/redis/templates/: redis.conf.j2
ansible/roles/relay-backend/handlers/: main.yml
ansible/roles/relay-backend/tasks/: main.yml
ansible/roles/relay-backend/templates/: backend.env.j2  relay-backend.service.j2  (+1 more)
ansible/scripts/: encrypt-vault.sh  gen-vault-keys.sh
docs/: ARCHITECTURE.md  PERFORMANCE_DESIGN.md  TODO.md  architecture.md  performance_design.md
docs/decisions/: ADR-001-compose-nobpf.md  ADR-002-pulumi-infra-over-manual-inventory.md  ADR-003-custom-kfunc-elf-loader.md
docs/sessions/: 2026-04-04-integration-test-plan.md  2026-04-04-relay-data-loader-plan.md  2026-04-05-compose-integration-test-plan.md  2026-04-05-next-actions-plan.md  2026-04-18-ansible-deployment-plan.md  2026-04-22-relay-sdk-plan.md  2026-04-22-relay-sdk-review.md  2026-04-26-ci-workflow-review.md  2026-04-26-relay-sdk-improvement-plan.md  2026-04-28-sdk-smoke-compose-plan.md  2026-04-30-pulumi-infra-plan.md  2026-05-01-kfunc-loader-impl-plan.md  2026-05-04-phase-1-critical-fixes-plan.md  2026-05-04-project-audit-plan.md
docs/templates/: decision_template.md  session_summary_template.md
infra/: .gitignore  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  backend_node.py  config.py  inventory_gen.py  network.py  relay_node.py  requirements.txt  test_inventory_gen.py
relay-backend/: ARCHITECTURE.md  Cargo.toml  Dockerfile
relay-backend/src/: config.rs  constants.rs  cost_matrix.rs  database.rs  encoding.rs  handlers.rs  lib.rs  magic.rs  main.rs  metrics.rs  optimizer.rs  redis_client.rs  relay_manager.rs  relay_update.rs  route_matrix.rs  state.rs
relay-backend/tests/: cross_crate_wire.rs  e2e_encrypted.rs  http_handler_integration.rs  integration_xdp.rs  json_loader_integration.rs  pipeline_integration.rs
relay-backend/tests/helpers/: mod.rs
relay-sdk/: ARCHITECTURE.md  Cargo.toml  Dockerfile.smoke  build.rs  cbindgen.toml
relay-sdk/benches/: relay_sdk.rs
relay-sdk/examples/: client_example.rs  server_example.rs
relay-sdk/include/: relay_generated.h
relay-sdk/src/: constants.rs  lib.rs  pool.rs  read_write.rs  stats.rs
relay-sdk/src/address/: mod.rs
relay-sdk/src/bitpacker/: mod.rs
relay-sdk/src/client/: mod.rs
relay-sdk/src/crypto/: mod.rs
relay-sdk/src/ffi/: mod.rs
relay-sdk/src/packets/: mod.rs
relay-sdk/src/platform/: linux.rs  mod.rs
relay-sdk/src/route/: mod.rs  trackers.rs
relay-sdk/src/server/: mod.rs
relay-sdk/src/stream/: mod.rs
relay-sdk/src/tokens/: mod.rs
relay-sdk/tests/: wire_compat.rs
relay-xdp/: Cargo.toml  Dockerfile  Dockerfile.nobpf
relay-xdp-common/: Cargo.toml
relay-xdp-common/src/: lib.rs
relay-xdp-ebpf/: Cargo.toml
relay-xdp-ebpf/.cargo/: config.toml
relay-xdp-ebpf/src/: main.rs
relay-xdp/src/: bpf.rs  config.rs  encoding.rs  kfunc.rs  lib.rs  main.rs  main_thread.rs  manager.rs  packet_filter.rs  ping_history.rs  ping_thread.rs  platform.rs
relay-xdp/tests/: backend_response_integration.rs  func_parity.rs  wire_compat.rs
tests/: compose-test.sh  gen-test-keys.sh
tests/fixtures/: test-relays.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+4 files in other folders)
