[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "relay_backend"
path = "src/lib.rs"

[[bin]]
name = "relay-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"


# Utilities
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
num_cpus = "1"

