[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "relay_backend"
path = "src/lib.rs"

[[bin]]
name = "relay-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Redis
redis = { version = "1.2.0", features = ["tokio-comp"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"


# Crypto (NaCl box - decrypt relay-xdp update requests)
crypto_box = "0.9"
getrandom = "0.4.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
num_cpus = "1"

[dev-dependencies]
relay-xdp = { path = "../relay-xdp" }
relay-xdp-common = { path = "../relay-xdp-common" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
crypto_box = "0.9"
getrandom = "0.4.2"

