[package]
name = "relay-sdk"
version = "0.1.0"
edition = "2021"
description = "Pure Rust SDK for game client/server connecting to relay-xdp network"

[lib]
name = "relay_sdk"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["linux"]
linux = []
windows = []
macos = []

[dependencies]
relay-xdp-common = { path = "../relay-xdp-common" }

# Crypto - Pure Rust, no C
chacha20poly1305 = "0.10"   # XChaCha20-Poly1305 AEAD (token encrypt/decrypt)
sha2 = "0.10"               # SHA-256 (header verify)
rand = "0.8"                # random nonce generation
zeroize = { version = "1", features = ["derive"] }  # zero secret keys on drop

# Utilities
thiserror = "1"
anyhow = "1"

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
hex-literal = "0.4"

