[package]
name = "relay-xdp"
version = "0.1.0"
edition = "2021"

[lib]
name = "relay_xdp"
path = "src/lib.rs"

[[bin]]
name = "relay-xdp"
path = "src/main.rs"

[dependencies]
relay-xdp-common = { path = "../relay-xdp-common", features = ["user"] }
aya = "0.13"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.4.3"
socket2 = { version = "0.6.3", features = ["all"] }
ureq = "3.3.0"
anyhow = "1"
libc = "0.2"

# Pure-Rust crypto (replaces libsodium-sys-stable)
sha2 = "0.11.0"
crypto_box = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake2 = "0.10"
getrandom = "0.4.2"

[dev-dependencies]
relay-backend = { path = "../relay-backend" }

